Mock up scripts

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,3 +1,11 @@
 [buildout]
 extends = http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
-parts = plone
+parts = plone import
+develop = src/parse2plone
+
+[import]
+recipe = zc.recipe.egg
+eggs = 
+    lxml
+    BeautifulSoup
+    parse2plone
