Flesh out the readme, and configure an import script only.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,7 +5,4 @@ develop = src/parse2plone
 
 [import]
 recipe = zc.recipe.egg
-eggs = 
-    lxml
-    BeautifulSoup
-    parse2plone
+eggs = parse2plone
