Add python interpreter

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,14 @@
 [buildout]
 extends = http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
-parts = plone import
+parts = plone import python
 develop = src/parse2plone
 
 [import]
 recipe = parse2plone
+
+[python]
+recipe = zc.recipe.egg
+interpreter = python
+eggs =
+    BeautifulSoup
+    lxml
