At least get the top level dirs, and add zeo

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,8 @@
 [buildout]
-extends = http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
-parts = plone import python
+extends = 
+    http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
+    http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
+parts = plone import python zeo supervisor
 develop = src/parse2plone
 
 [import]
@@ -12,3 +14,6 @@ interpreter = python
 eggs =
     BeautifulSoup
     lxml
+
+[plone]
+zeo-client = true
