Actually, move the entire works to the top level dir

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,7 @@ extends =
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
 parts = plone import python zeo supervisor
-develop = src/parse2plone
+develop = .
 
 [import]
 recipe = parse2plone
