--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,12 @@ develop = .
 
 [import]
 recipe = parse2plone
+#path = Plone
+#html_file_ext = html
+#image_file_ext = gif jpg jpeg png
+#target_tags = a div h1 h2 p
+#illegal_chars = _
+
 
 [python]
 recipe = zc.recipe.egg
