Add a test script The Right Way™ I hope ?

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 extends = 
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
-parts = plone import python zeo supervisor
+parts = plone import python zeo supervisor test
 develop = .
 
 [import]
@@ -12,6 +12,12 @@ recipe = parse2plone
 #image_file_ext = gif jpg jpeg png
 #target_tags = a div h1 h2 p
 #illegal_chars = _
+
+path = Plone
+html_file_ext = html
+image_file_ext = gif jpg jpeg png
+target_tags = a div h1 h2 p
+illegal_chars = _
 
 
 [python]
@@ -24,3 +30,7 @@ eggs =
 [plone]
 zeo-client = true
 eggs += ipdb
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = parse2plone [tests]
