Support multi line input

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,11 +8,8 @@ develop = .
 [import]
 recipe = parse2plone
 rename = 
-
-
-    /foo/bar    /foo/baz
-
-
+    /foo/bar /foo/baz
+    /foo/bilge /foo/qux
 
 [python]
 recipe = zc.recipe.egg
