--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,8 +8,7 @@ develop = .
 [import]
 recipe = parse2plone
 rename = 
-    /foo/bar /foo/baz
-    /foo/bilge /foo/qux
+    /about /whocares
 
 [python]
 recipe = zc.recipe.egg
