--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,7 +8,8 @@ develop = .
 [import]
 recipe = parse2plone
 rename = 
-    /about /whocares
+    /foo /bar
+    /baz /qux
 
 [python]
 recipe = zc.recipe.egg
