Fix bug in convert_parameter_values

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,9 +7,16 @@ develop = .
 
 [import]
 recipe = parse2plone
-rename = 
-    /foo /bar
-    /baz /qux
+path = /Plone
+illegal_chars = _ .
+html_extensions = html
+image_extensions = gif jpg jpeg png
+file_extensiosn = mp3
+target_tags = a div h1 h2 p
+force = false
+publish = false
+slugify = false
+rename = false
 
 [python]
 recipe = zc.recipe.egg
