Fix more bugs in convert_parameter_values

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,7 +16,9 @@ target_tags = a div h1 h2 p
 force = false
 publish = false
 slugify = false
-rename = false
+rename =
+    /foo /bar
+    /baz /qux
 
 [python]
 recipe = zc.recipe.egg
