Pass in "real" False, False, False, and None values to main for force, publish, slugify, and rename.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,14 +11,12 @@ path = /Plone
 illegal_chars = _ .
 html_extensions = html
 image_extensions = gif jpg jpeg png
-file_extensiosn = mp3
+file_extensions = mp3
 target_tags = a div h1 h2 p
 force = false
 publish = false
 slugify = false
 rename =
-    /foo /bar
-    /baz /qux
 
 [python]
 recipe = zc.recipe.egg
