Remove script when recipe is uninstalled

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 extends = 
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
-parts = plone import python zeo supervisor test
+parts = plone python zeo supervisor test
 develop = .
 
 [import]
