--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,9 @@ develop = .
 
 [import]
 recipe = parse2plone
+typeswap =
+    Document MyPage
+    Folder MySection
 
 [python]
 recipe = zc.recipe.egg
