Change the accent

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,8 +2,11 @@
 extends = 
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
-parts = plone python import zeo supervisor test
+parts = plone python import zeo supervisor test funnelweb
 develop = .
+
+[funnelweb]
+recipe = funnelweb
 
 [import]
 recipe = parse2plone
