--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,15 +2,12 @@
 extends = 
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
-parts = plone python import zeo supervisor test funnelweb
+parts = plone python import zeo supervisor test
 develop = .
-
-[funnelweb]
-recipe = funnelweb
 
 [import]
 recipe = parse2plone
-match = 2008
+match = 2004 2005 2006
 
 [python]
 recipe = zc.recipe.egg
