--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,8 @@ develop = .
 [import]
 recipe = parse2plone
 match = 2004 2005 2006
+force = true
+slugify = true
 
 [python]
 recipe = zc.recipe.egg
