Add "paths" feature to accept multi-import_dirs

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 extends = 
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
+extends-cache = var
 parts = plone python import zeo supervisor test funnelweb
 develop = .
 
@@ -20,7 +21,6 @@ eggs =
 
 [plone]
 zeo-client = true
-http-address = 8081
 
 [test]
 recipe = zc.recipe.testrunner
