Go to great lengths to print nice results

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,10 @@ recipe = funnelweb
 
 [import]
 recipe = parse2plone
+paths = 
+    sample /Plone/sample
+    sample2 /Plone/sample2
+force = true
 
 [python]
 recipe = zc.recipe.egg
