--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,25 +3,11 @@ extends =
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
 extends-cache = var
-parts = plone python import zeo supervisor test funnelweb
+parts = plone python import zeo supervisor test
 develop = .
-
-[funnelweb]
-recipe = funnelweb
 
 [import]
 recipe = parse2plone
-paths = 
-    sample /Plone/sample
-    sample2 /Plone/sample2
-force = true
-
-[python]
-recipe = zc.recipe.egg
-interpreter = python
-eggs =
-    BeautifulSoup
-    lxml
 
 [plone]
 zeo-client = true
