Fix replace types

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,7 @@ extends =
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
     http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
 extends-cache = var
-parts = plone python import zeo supervisor test
+parts = plone import zeo supervisor test
 develop = .
 
 [import]
