Check for bad recipe params

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,13 +1,16 @@
 [buildout]
 extends = 
-    http://github.com/aclark4life/Plone-4-Buildout/raw/master/buildout.cfg
-    http://github.com/aclark4life/Plone-4-Buildout/raw/master/zeo.cfg
+    http://dist.aclark.net/buildout/plone/4.0.x/buildout.cfg
+    http://dist.aclark.net/buildout/plone/4.0.x/zeo.cfg
 extends-cache = var
 parts = plone import zeo supervisor test
 develop = .
 
 [import]
 recipe = parse2plone
+paths = 
+    sample /Plone/sample
+    sample2 /Plone/sample2
 
 [plone]
 zeo-client = true
