Shouldn't this pdb "work"?

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,4 +18,6 @@ zeo-client = true
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = parse2plone [tests]
+eggs = 
+    parse2plone [tests]
+    Pillow
