Relo extends cache ; and experiment w/xlrd to parse xls files

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 extends = 
     http://dist.aclark.net/buildout/plone/4.0.x/buildout.cfg
     http://dist.aclark.net/buildout/plone/4.0.x/zeo.cfg
-extends-cache = var
+extends-cache = .
 parts = plone import zeo supervisor test
 develop = .
 
