Fix docs ; mock up spreadsheet feature

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,6 +12,7 @@ force = true
 paths = 
     sample /Plone/sample
     sample2 /Plone/sample2
+create_spreadsheet = true
 
 [plone]
 zeo-client = true
