--- a/defaults.cfg
+++ b/defaults.cfg
@@ -11,6 +11,7 @@ target_tags = a div h1 h2 p
 force = false
 publish = false
 collapse = false
+create_spreadsheet = false
 rename =
 replacetypes =
 match =
