--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,7 @@ parts = plone import zeo supervisor test
 develop = .
 
 [import]
-recipe = parse2plone
+recipe = mr.import
 force = true
 create_spreadsheet = true
 
