Can't use "import" namespace after all ;-)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,7 @@ parts = plone import zeo supervisor test
 develop = .
 
 [import]
-recipe = mr.import
+recipe = mr.importer
 force = true
 create_spreadsheet = true
 
