Create a damn Plone site

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,15 +1,14 @@
 [buildout]
-extends = 
-    http://dist.aclark.net/build/plone/4.0.x/buildout.cfg
-    http://dist.aclark.net/build/plone/4.0.x/zeo.cfg
-extends-cache = .
-parts = plone import zeo supervisor test
+extends = http://dist.aclark.net/build/plone/4.0.x/zeo.cfg
+parts = import test plonesite
 develop = .
+
+[plonesite]
+recipe = collective.recipe.plonesite
+instance = plone
 
 [import]
 recipe = mr.importer
-force = true
-create_spreadsheet = true
 
 [funnelweb]
 recipe = funnelweb
@@ -20,5 +19,5 @@ zeo-client = true
 [test]
 recipe = zc.recipe.testrunner
 eggs = 
-    parse2plone [tests]
+    mr.importer [tests]
     Pillow
