--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends = http://dist.aclark.net/build/plone/4.0.x/zeo.cfg
-parts += import test plonesite funnelweb
+parts += import test funnelweb
 develop = .
 
 [plonesite]
