--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,17 +1,14 @@
 [buildout]
-extends = http://dist.aclark.net/build/plone/4.0.x/zeo.cfg
-parts += import test funnelweb
+extends = http://dist.aclark.net/build/plone/4.1.x/zeo.cfg
+parts += charm
 develop = .
 
 [plonesite]
 recipe = collective.recipe.plonesite
 instance = plone
 
-[import]
-recipe = mr.importer
-
-[funnelweb]
-recipe = funnelweb
+[charm]
+recipe = charm
 
 [plone]
 zeo-client = true
@@ -19,5 +16,5 @@ zeo-client = true
 [test]
 recipe = zc.recipe.testrunner
 eggs = 
-    mr.importer [tests]
+    charm [tests]
     Pillow
