Add test runner

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends = http://dist.aclark.net/build/plone/4.0.x/zeo.cfg
-parts += charm
+parts += charm test
 develop = .
 
 [plonesite]
