Final rename: rename charm -> parse2plone

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,14 @@
 [buildout]
 extends = http://dist.aclark.net/build/plone/4.0.x/zeo.cfg
-parts += charm test
+parts += parse2plone test
 develop = .
 
 [plonesite]
 recipe = collective.recipe.plonesite
 instance = plone
 
-[charm]
-recipe = charm
+[parse2plone]
+recipe = parse2plone
 
 [plone]
 zeo-client = true
@@ -16,5 +16,5 @@ zeo-client = true
 [test]
 recipe = zc.recipe.testrunner
 eggs = 
-    charm [tests]
+    parse2plone [tests]
     Pillow
